# SebastianBot

./: .env.sample  .gitignore  .pre-commit-config.yaml  README.md  UBIQUITOUS_LANGUAGE.md  code_report.html  coding_guidelines.md  function_app.py  pyproject.toml  requirements.txt  requirements_local.txt
.devcontainer/: Dockerfile  devcontainer-lock.json  devcontainer.json
.github/: copilot-instructions.md
.github/instructions/: CreateAzureFunction.md  INVESTIGATION_TO_AZURE.md  create_client.instructions.md  create_feature_usecase.instructions.md  create_function.instructions.md  create_service.instructions.md  feature_usecase_flow.instructions.md  testing.instructions.md  update_feature_usecase_flow.instructions.md
.github/prompts/: UpdateFlowDocumentation.prompt.md  UpdateInstructions.prompt.md  new_client_feature.prompt.md
.github/workflows/: tests.yml
.pi/: settings.json
.pi/prompts/: create_glossary.md  grill-me.md  improve-codebase.md  work-on-ticket.md
cloud/dependencies/: RedditClientFactory.py  __init__.py  clients.py  services.py  usecases.py
cloud/functions/: DeliveryReadyFunction.py  MangaUpdateFunction.py  MietplanFunction.py  OnePunchManFunction.py  ReturnTrackerFunction.py  SkeletonSoldierFunction.py  TriggerTimes.py  WinSimFunction.py  __init__.py
cloud/helper/: EventGridMixin.py  __init__.py  azure_secrets.ipynb  event_grid.py  event_grid_mixin.py  parsing.py  secrets.py  typevars.ipynb
google_token/: create_credentials.py
infrastructure/google/: GoogleAzureHelper.py  GoogleSecret.py
infrastructure/telegram/: AzureHelper.py  TelegramFunction.py  TelegramSecret.py  azure_input.py  telegram.json  telegram_service.py
investigations/: MangaUpdate.ipynb  RedditClient.ipynb  SkeletonSoldier.ipynb  azure_secrets.ipynb  common.py  delivery_ready.ipynb  gmail.ipynb  gmail_pdf_download.ipynb  google_drive.ipynb  google_task.ipynb  telegram.ipynb  type_inference.ipynb
investigations/dhl/: track_status.py
investigations/google_token/: create_credentials.py
notes/: dev_setup.md  next.md  secrets.md
notes/dev_setup/: dependencies.md  general.md  secrets.md
sebastian/clients/: __init__.py  _http_session.py
sebastian/domain/: bibo.py  calendar.py  date_filter.py  delivery_ready_task_note.py  gmail.py  mietplan.py  shared.py  side_effect.py  side_effects.py  task.py
sebastian/protocols/: gmail.py  google_drive.py  google_task.py  manga_update.py  mietplan.py  models.py  reddit.py
shared/: __init__.py  azure_helper.py  dates.py  secrets.py
tests/: astroid_parsing.ipynb  helper.py  profile_results.txt  test_dates.py  test_imports.py
tickets/: align_ubiquitous_language.md  architecture-plan-candidate-3-task-note-contract.md  email-processing-migration-plan.md
(+298 files in other folders)
