[tool.poetry]
name = "sebastianbot"
version = "0.1.0"
description = "Azure Functions bot for personal automation"
authors = ["omlnaut"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
azure-functions = "^1.24"
python-telegram-bot = "^22.5"
azure-identity = "^1.25"
azure-keyvault-secrets = "^4.10"
pydantic = "^2.12"
google-auth-oauthlib = "^1.2"
google-api-python-client = "^2.187"
beautifulsoup4 = "^4.14"
requests = "^2.32.5"
moqpy = "^0.0.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^7.1"
pytest = "^9.0"
pytest-cov = "^7.0"
pre-commit = "^4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
